# mysmtp

./: .gitignore  main.py  mysmtp.service  pyproject.toml  subproc.py
notes/: logwatch.md  toolkit.md
scripts/: main.py  plot.py  time-user.py
src/mysmtp/: email.py  subproc.py  tasks.py
src/mysmtp/task/: du.py  plot.py
src/mysmtp/top/: disk.py  gpu.py  usage.py
task/: plot.py
