[build-system]
requires = ["uv_build>=0.9.15"]
build-backend = "uv_build"

[project]
name = "mysmtp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "rich>=14.2.0",
]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["osx-64"]

[tool.pixi.pypi-dependencies]
mysmtp = { path = ".", editable = true }

[tool.pixi.tasks]
install-service = "mkdir -p \"$HOME/.config/systemd/user\" && cp mysmtp.service \"$HOME/.config/systemd/user/mysmtp.service\""
